Angular tutorial - moving into master/detail components, services, and routing.

--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -1,6 +1,6 @@
 /* HeroesComponent's private CSS styles */
 .selected {
-    background-color: #CFD8DC !important;
+    background-color: #b4a9c5 !important;
     color: white;
 }
 .heroes {
