--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -33,13 +33,13 @@ h4 {
     color: #eee;
     max-height: 120px;
     min-width: 120px;
-    background-color: #607D8B;
-    border-radius: 2px;
+    background-color: #452a6f;
+    border-radius: 4px;
 }
 .module:hover {
     background-color: #EEE;
     cursor: pointer;
-    color: #607d8b;
+    color: #452a6f;
 }
 .grid-pad {
     padding: 10px 0;
