Angular tutorial - Second round HTTP.  Finished Heroes Tutorial!

--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -1,8 +1,5 @@
 /* HeroesComponent's private CSS styles */
-.selected {
-    background-color: #b4a9c5 !important;
-    color: white;
-}
+
 .heroes {
     margin: 0 0 2em 0;
     list-style-type: none;
@@ -58,4 +55,25 @@
     position: relative;
     top: -30px;
     left: 250px;
+}
+
+.button {
+    background-color: #eee;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: hand;
+    font-family: Arial;
+}
+
+button:hover {
+    background-color: #cfd8dc;
+}
+
+button.delete {
+    position: relative;
+    left: 194px;
+    top: -32px;
+    background-color: gray !important;
+    color: white;
 }
